--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.0",
+    "notiflix": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
